--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -2,6 +2,84 @@
 
 =head1 Dada Mail Changelog for version 4.x.x
 
+=head1 4.9.0 
+
+This release is currently in ALPHA and there are many unknown bugs. Probably. 
+
+=head2 Summary 4.9.0
+
+This release focuses on many parts of Dada Mail to enhance performance: 
+
+=over
+
+=item * Sending performance has been optimized. Less memory used, faster template parsing
+
+=item * Amazon SES sending performance has also been improved
+
+=item * New time and date template tags available
+
+=item * HTML::Template::Pro support Added
+
+=item * Bounce Handler improvements, including per-list preferences and a "bounce score decay" feature.
+
+=back
+
+=head2 Features 4.9.0
+
+=head3 Bounce Handler
+
+Bounce Handler preferences, including the Soft Bounce Score, Hard Bounce Score and Score Threshold 
+are now set B<per mailing list>, instead of having to be set in the global config. 
+
+Bounce Scores can now, B<decay>, or be reduced every time a mass mailing is sent out. This is to help
+minimize scores from email addresses that temporarily have had problems with delivery, but are otherwise
+valid email addresses.  An email address's bounce score will also now be automatically removed, if the score goes 
+at or below, B<0>.
+
+The Bounce Scorecard is now presented on the main screen for the bounce handler, instead of being shown on a separate screen. 
+Navigating the scorecard is now a little more intuitive, as well. 
+
+=head3 HTML::Template::Pro support, Faster Template Rendering
+
+C<HTML::Template::Pro> renders the templates that Dada Mail uses throughout the app, 
+including HTML screens and custom email messages, much faster than what's included
+with Dada Mail (C<HTML::Template>). C<HTML::Template::Pro> will need to be installed seperately. 
+
+See the features doc on C<HTML::Template::Pro> for more information: 
+
+L<./features-html_template-pro.pod.html>
+
+=head3 Faster sending using Amazon SES
+
+Dada Mail now uses a persistent HTTP connection when talking with Amazon SES. This can 
+speed up sending by .3 - .7 seconds/I<message>. 
+
+=head3 New Template Tags for Date/Time
+
+Dada Mail now has support for various simple Date and Time formats to use in HTML and Email templates, 
+as well support for more flexible/advanced C<strftime> formats:
+
+L<./features-email_template_syntax.pod#FIXMEFIXMEFIXME>
+
+=head2 Changes 4.9.0
+
+=head3 Documentation Updates
+
+A new/update entry in the General FAQ, I<Tuning Dada Mail to Send Mass Mailings Faster>:
+
+L<FIX ME FIX ME FIX ME>
+
+=head2 CPAN Module Changes and Updates
+
+=head3 LWP unbundled
+
+The C<LWP> group of Perl modules is no longer available with Dada Mail. C<LWP> is used for
+such things as, B<Send a Webpage> and some web services, like B<Amazon SES>. You 
+will have to install C<LWP> yourself. 
+
+=head3 MIME::Tools upgraded to v5.502
+
+This upgrade to MIME::Tools has a very positive improvement on sending speed. 
 
 =head1 4.8.4
 
