--- a/dada/extras/documentation/pod_source/features-email_template_syntax.pod
+++ b/dada/extras/documentation/pod_source/features-email_template_syntax.pod
@@ -211,7 +211,7 @@ L<http://php.net/manual/en/function.strftime.php>
 
 it's the same thing. 
 
-To use this in Dada Mail's templating syntax, use the C<E<lt>!-- tmpl_tmpl_strftime --E<gt> tag, like this: 
+To use this in Dada Mail's templating syntax, use the C<E<lt>!-- tmpl_strftime --E<gt> tag, like this: 
 
 	<!-- tmpl_strftime %a, %d %b %Y -->
 
