--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -10,7 +10,7 @@ Please do not use in a production environment. Only use for testing purposes.
 
 =head2 Summary 4.9.0
 
-This release focuses on many parts of Dada Mail to optimize performance. Benifits of all this work include
+This release focuses on many parts of Dada Mail to optimize performance. Benefits of all this work include
 faster mass sending speeds. Potentially must faster. 
 
 =over
