Closes #239 Mailing Monitor - verbose flag/parameter set to, "0" doesn't stop verbosity

--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -59,6 +59,10 @@ https://github.com/justingit/dada-mail/issues/236
 
 https://github.com/justingit/dada-mail/issues/237
 
+=head3 Mailing Monitor - verbose flag/parameter set to, "0" doesn't stop verbosity
+
+https://github.com/justingit/dada-mail/issues/239
+
 =head1 4.8.3
 
 =head2 Summary 4.8.3
