--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -31,16 +31,26 @@ faster mass sending speeds. Potentially must faster.
 
 =head3 Bounce Handler
 
+=head4 Set Scorecard Prefs per-list, instead of Globally
+
 Bounce Handler preferences, including the Soft Bounce Score, Hard Bounce Score and Score Threshold 
 are now set B<per mailing list>, instead of having to be set in the global config. 
+
+=head4 Decaying Scores
 
 Bounce Scores can now, B<decay>, or be reduced every time a mass mailing is sent out. This is to help
 minimize scores from email addresses that temporarily have had problems with delivery, but are otherwise
 valid email addresses.  An email address's bounce score will also now be automatically removed, if the score goes 
 at or below, B<0>.
 
-The Bounce Scorecard is now presented on the main screen for the bounce handler, instead of being shown on a separate screen. 
+=head4 Bounce Scorecard Conveniently on the default screen
+
+The Bounce Scorecard is now presented on the default screen for the bounce handler, instead of being shown on a separate screen. 
 Navigating the scorecard is now a little more intuitive, as well. 
+
+=head4 SES Support
+
+Dada Mail/Bounce Handler should now have support for Amazon SES sending. This is still marked as, B<Experimental> (as is SES support in total), but SES-specific rules have been whipped up. Please give us feedback!
 
 =head3 HTML::Template::Pro support, Faster Template Rendering
 
@@ -51,7 +61,6 @@ with Dada Mail (C<HTML::Template>). C<HTML::Template::Pro> will need to be insta
 See the features doc on C<HTML::Template::Pro> for more information: 
 
 L<http://dadamailproject.com/support/documentation/features-html_template-pro.pod.html>
-
 
 =head3 Faster sending using Amazon SES
 
