Writing the docs over and clearing some stuff up.

--- a/dada/extras/documentation/pod_source/FAQ-configuring.pod
+++ b/dada/extras/documentation/pod_source/FAQ-configuring.pod
@@ -69,7 +69,7 @@ Several oft-used global configuration variables are placed in the C<.dada_config
 
  $PLUGIN_CONFIGS = { 
      
-     Mystery_Girl => { 
+     Bounce_Handler => { 
      
          # A whole bunch of stuff... 
      
